--- a/.flow-plugin.yml
+++ b/.flow-plugin.yml
@@ -10,13 +10,11 @@ tags:
   - build
  
 inputs:
- 
-#inputs:
-#  - name: FLOW_ANDROID_GRADLE_TASK
-#    editable: true
-#    desc_cn: "使用 gradlew 构建所需要的参数 默认为 build"
-#    desc_en: "Arguments for gradlew"
-#    default: "build"
+  - name: FLOW_ANDROID_GRADLE_TASK
+    editable: true
+    desc_cn: "使用 gradlew 构建所需要的参数 默认为 build"
+    desc_en: "Arguments for gradlew"
+    default: "build"
 
 outputs:
 
